# launcher

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: config.rs  consts.rs  daemon.rs  history.rs  main.rs  temp_data.rs  utils.rs
src/crab_row/: imp.rs  mod.rs
src/crab_tabs/: imp.rs  mod.rs
src/music_object/: imp.rs  mod.rs
src/music_service/: mod.rs  spotify_service.rs  youtube_service.rs
src/resources/: crab_row.ui  crab_tabs.ui  resources.gresource.xml  song_info.ui  style.css  window.ui
src/song_info/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
