[package]
name = "crab-launcher"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
once_cell = "1.0"
async-process = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
dirs = "4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.18", features = ["full"] }
sysinfo = "0.23"
async-trait = "0.1"

[build-dependencies]
gtk = { version = "0.4", package = "gtk4" }
