[package]
name = "crab-launcher"
version = "0.2.0"
edition = "2021"

[dependencies]
gtk = { version = "0.4", package = "gtk4" }
once_cell = "1.0"
async-process = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
dirs = "4.0"
tokio = { version = "1.18", features = ["full"] }
sysinfo = "0.23"
async-trait = "0.1"
rspotify = { version = "0.11", default-features = false, features = ["client-reqwest", "reqwest-native-tls", "cli"] }
dotenv = "0.15"
dotenv_codegen = "0.15"
futures = "0.3"
google-youtube3 = "3.1"
hyper-rustls = { version = "0.23", features = ["rustls-native-certs"] }
hyper = "0.14"

[build-dependencies]
gtk = { version = "0.4", package = "gtk4" }
